tests/baselines/reference/parserClassDeclaration7.errors.txt
parserClassDeclaration7.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserClassDeclaration7.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== parserClassDeclaration7.ts (2 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      declare class C {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }